<resources>
    <string name="app_name">Adopt a pet</string>

    <!-- Strings related to login -->
    <string name="email_login_button">Log In</string>
    <string name="email_sign_up_button">Sign Up</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="contact_us_title">יצירת קשר</string>
    <string name="phone">Phone Number:</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="logo">Logo</string>
    <string name="signupImage">Image</string>
    <string name="emailTextView">Email</string>
    <string name="emailEditText">Email Text</string>
    <string name="passwordTextView">Password</string>
    <string name="nameTextView">Name</string>
    <string name="phoneTextView">Phone</string>
    <string name="submitButton">Submit</string>
    <string name="checkBox">CheckBox</string>
    <string name="dogImage">Dog</string>
    <string name="dogName">Name of the Dog</string>
    <string name="editText">חיפוש לפי שם</string>
    <string name="textView3">מידע למאמץ</string>
    <string name="textView4">בריאות</string>
    <string name="textView7">עיקור/סירוס</string>
    <string name="textView2">לאחר אימוץ הכלב יש לקחת אותו לבדיקה שגרתית אצל הווטרינר לרישום הכלב, העברת שבב הזיהוי על שמכם וקבלת הדרכה לגבי טיפול שוטף וחיסונים</string>
    <string name="textView8">ציוד בסיסי</string>
    <string name="textView">חובה!  לעיקור/סירוס יתרונות רפואיים-בריאותיים, התנהגותיים ומוסריים ואף כלכליים</string>
    <string name="textView5">קולר, תג עם מספר הטל\'שלכם,רצועה,מברשת, מיטה או שמיכה, כלים לאוכל ומים, מזון. אם הכלב ישהה בחצר: מלונה אטומה, יבשה ומקורה, שמיכה או כרית, חצר מגודרת, סגורה ושער נעול</string>
    <string name="textView6">דאג לתזונה הולמת לכלב, היוועץ בווטרינר בהתאם לגודל הכלב. רצוי לרכוש מזון יבש איכותי בחנויות לציוד ומזון לבע"ח או אצל וטרינר. ניתן לחלק את כמות האוכל ל-2 ארוחות נפרדות. עצמות עוף, שוקולד ותרופות מסוימות של בני אדם מזיקים לכלבים! בכל מקרה, מומלץ לקנות לכלב צעצועים ועצמות המיועדים לו, למשחק ועניין.</string>
    <string name="textView14">טיול</string>
    <string name="textView15">על כלב לצאת לטייל לפחות 3 פעמים ביום. טיילו עם הכלב עם רצועה! לאחר שהכלב מתרגל וחוזר כשקוראים לו, אפשר לשחרר אותו במקומות בטוחים ללא מכוניות, כגון גינות ייעודיות לכלבים, פארקים וחוף הים. שחרור הכלב לטייל לבד ללא השגחה אסור על פי חוק ומסוכן לכלב ולסביבה.</string>
    <string name="textView13">אין להוציא או להפגיש עם כלבים אחרים עד לאחר 3 חיסוני המשושה. לאחר מכן, חשוב שיכירו את העולם החיצון, אנשים, ילדים וכו\' ויפגשו כלבים אחרים כדי שידעו להתנהג בחברת כלבים ולא יגדלו פחדנים / תוקפנים</string>
    <string name="textView12">שבב</string>
    <string name="textView10">החוק מחייב לעדכן את שבב הזיהוי של הכלב ברשות המקומית שלך.  העמותה רשאית לקבל חזרה את הכלב במידה והוא לא מטופל כראוי</string>
    <string name="textView11">גורים</string>
    <string name="textView9">מזון</string>
    <string name="imageView">Image</string>
    <string name="parse_server_url">YOUR_SERVER_URL</string>
    <string name="parse_app_id">YOUR_APPLICATION_ID</string>
    <string name="about">אודות</string>
    <string name="userName">שם + שם משפחה</string>
    <string name="emailText">exemple@gmail.com</string>
    <string name="phoneUser">Phone</string>
    <string name="wishlist">Wish List</string>
    <string name="aboutText">עמותת הרצליה אוהבת חיות הוקמה בכדי לשפר את מצב בעלי החיים בהרצליה והשרון</string>
    <string-array name="type">
        <item>סוג</item>
        <item>מעורב</item>
        <item>גזעי</item>
    </string-array>
    <string-array name="gender">
        <item>Gender</item>
        <item>Female</item>
        <item>Male</item>
    </string-array>
    <string name="title_activity_fd_acivity">Find a dog</string>
    <string name="title_activity_inf_activiy">Information</string>
    <string name="title_activity_sn">Sign Up</string>
    <string name="title_activity_us">User Information</string>
    <string name="title_activity_dg">Dog Information</string>
    <string name="title_activity_contact_us">Contact Us</string>


</resources>
