<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.anna_rgmv.adoptapet.SignupActivity">


    <LinearLayout
        android:padding="5dp"
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <ImageView
            android:id="@+id/signupImage"
            android:layout_width="276dp"
            android:layout_height="94dp"
            android:contentDescription="@string/signupImage"
            app:srcCompat="@drawable/signupicon"/>

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emailTextView"/>


        <EditText
            android:id="@+id/emailEditText"
            android:labelFor="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:inputType="textEmailAddress"/>

        <TextView
            android:id="@+id/passwordTextView"
            android:labelFor="@+id/passwotdEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passwordTextView"/>

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:inputType="textPassword"
            android:labelFor="@+id/passwordEditText"/>

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nameTextView"/>

        <EditText
            android:id="@+id/nameEditText"
            android:labelFor="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:inputType="text"/>

        <TextView
            android:id="@+id/phoneTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"/>

        <EditText
            android:id="@+id/phoneEditText"
            android:labelFor="@+id/phoneEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:inputType="phone"
            />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="tryToSubmit"
            android:text="@string/submitButton"


            />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
