<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:gravity="center"
                                             android:orientation="vertical"
                                             android:background="@android:color/holo_orange_light"
                                             tools:context="com.example.anna_rgmv.adoptapet.LoginActivity"
                                             android:weightSum="1">

    <!-- Login progress -->

    <ImageView
        android:id="@+id/logo"
        android:layout_width="134dp"
        android:layout_height="132dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        android:background="@android:color/background_light"
        android:contentDescription="@string/logo"
        android:scaleType="fitCenter"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/adoptmelogo"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"/>


            <EditText
                android:id="@+id/email"
                android:layout_width="347dp"
                android:layout_height="57dp"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginLeft="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintVertical_bias="0.401"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintHorizontal_bias="0.523"/>





            <EditText
                android:id="@+id/password"
                android:layout_width="347dp"
                android:layout_height="57dp"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/email"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintHorizontal_bias="0.513"/>



        <Button
            android:id="@+id/email_login_button"
            style="?android:textAppearanceSmall"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:onClick="logIn"
            android:text="@string/email_login_button"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintVertical_bias="0.892"/>

        <Button
            android:id="@+id/email_sign_up_button"
            style="?android:textAppearanceSmall"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:onClick="signUp"
            android:text="@string/email_sign_up_button"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/email_login_button"
            android:layout_marginLeft="8dp"
            app:layout_constraintHorizontal_bias="0.954"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintVertical_bias="0.892"/>

    <CheckBox
        android:id="@+id/rememberMe"
        android:layout_width="129dp"
        android:layout_height="33dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="38dp"
        android:text="Remember me"
        android:onClick="onCheckboxClicked"
        app:layout_constraintBottom_toTopOf="@+id/email_login_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.0"/>


</android.support.constraint.ConstraintLayout>
