<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_light"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.anna_rgmv.adoptapet.ContactUs"
    tools:showIn="@layout/activity_contact_us">

    <TextView
        android:id="@+id/contact_us_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/contact_us_title"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/about"
        android:layout_width="359dp"
        android:layout_height="19dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="8dp"
        android:text="@string/about"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/contact_us_title"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/aboutText"
        app:layout_constraintVertical_bias="0.0"/>

    <TextView
        android:id="@+id/aboutText"
        android:layout_width="359dp"
        android:layout_height="45dp"
        android:layout_marginEnd="14dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/aboutText"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="382dp"/>


</android.support.constraint.ConstraintLayout>
